# icfpc2022-tbd

./: .gitignore  Cargo.toml  flake.nix  lang-spec.xy  tsconfig.json
.cargo/: config
.github/workflows/: ci.yml
data/: dumb_scrape.sh  json_to_plain.sh
data/problems/: 26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.initial.json  37.initial.json  38.initial.json  39.initial.json  40.initial.json
docs/: clippy.md  contributing.md  dashboard.md  db.md  dirs.md  entry_points.md  invocation.md  setup.md
js/: ajax.ts  interpreter.ts  lexer.ts  parser.ts  types.ts
src/: api.rs  basic.rs  color_util.rs  db.rs  dump_final_submissions.rs  image.rs  invocation.rs  kyeet.rs  main.rs  pack.rs  print_invocations.rs  seg_util.rs  solver_utils.rs  stats.rs  transform.rs  uploader.rs  util.rs
src/blocoder/: Makefile  README.txt  bitmap.c  bitmap.h  blochunter.c  blochunter.h  blockdata.c  blockdata.h  blocoder.c  blocundo.c  blocundo.h  cmod.h  darray.c  darray.h  file.c  file.h  fsfont.c  fsfont.h  hashtable.c  hashtable.h  intcoord.c  intcoord.h  isl.c  isl.h  islseq.c  islseq.h  lap.c  lap.h  list.c  list.h  memory.c  memory.h  pixelcolor.c  pixelcolor.h  serialized.c  serialized.h  stdfunc.c  stdfunc.h  stdtypes.h  string.c  (+7 more)
src/dashboard/: dev_server.rs  examples.rs  invocations.rs  mod.rs  solutions.rs  static_files.rs  submissions.rs
src/qtree/: solver.rs
src/solvers/: brick.rs  cheese.rs  dummy.rs  ga.rs  mod.rs  poke.rs  qtree.rs  raster.rs  spot.rs  swan.rs
templates/: ajax.html  base.html  examples.html  interpreter.html
(+3 files in other folders)
