[package]
name = "icfpc2022-tbd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "*"
url = "*"
askama = { version = "*", default-features = false }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
postgres = { version = "*", features = ["with-serde_json-1", "with-chrono-0_4"] }
once_cell = "*"
whoami = "*"
chrono = { version = "*", default-features = false, features = ["std"] }
image = { version = "*", default-features = false, features = ["png"] }
pico-args = { version = "*", features = ["eq-separator"] }
rstats = "^1"
base64 = "*"
rand = "*"
ureq = "*"

[profile.dev.package."*"]
opt-level = "s"
debug = false

[profile.dev]
debug = 1

[profile.release.package."*"]
debug = false

[profile.release]
debug = 1
incremental = true
